Make source code truly java8 compatible